--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
+  "type": "module",
   "description": "[![Actions Status](https://github.com/SerSurgut/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/SerSurgut/frontend-project-44/actions)",
   "main": "index.js",
   "scripts": {
@@ -8,5 +9,9 @@
     "start": "node bin/brain-games.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  }
 }
