--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "author": "",
   "license": "ISC",
-  
   "bin": {
     "brain-games": "bin/brain-games.js"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
   }
 }
