--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "brain-prime": "bin/brain-prime.js"
   },
   "dependencies": {
+    "jest": "^29.0.3",
+    "make": "^0.8.1",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1"
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.0.4"
   }
 }
